--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,6 @@ repos:
       #   newline will need multiple runs.
       - id: trailing-whitespace
       - id: end-of-file-fixer
-      - id: mixed-line-ending
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "v4.0.0-alpha.8"
     hooks:
@@ -50,3 +49,8 @@ repos:
     hooks:
       - id: talonfmt
         args: ["--in-place"]
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      - id: mixed-line-ending
+        args: ["--fix=lf"]
